ISP20211032 - BA Criteria調整

--- a/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
@@ -116,7 +116,7 @@
                                 <th>Sample Stage</th>
                                 <th>Qty</th>
                                 <th>Inspected Qty</th>
-                                <th>BA Produc</th>
+                                <th>BA Product</th>
                                 <th>BA Criteria</th>
                             </tr>
                         </thead>
