--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/AddDefect.cshtml
@@ -35,7 +35,7 @@
     </table>
 </div>
         <div style="width:100%">
-            <input type="hidden" id="page" name="page">
+            <input type="hidden" id="goPage" name="goPage">
             <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" class="button" style="right:7em;padding: 0;"><p style="font-size:12px;">Back</p></button>
             <button id="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
         </div>
@@ -65,7 +65,7 @@
             }
         }
 
-        // 組摺疊用的arrayS
+        // 組摺疊用的array
         var keyCount = 0;
 
         while (keyCount < result.length)
@@ -134,8 +134,8 @@
             $(list).each(function (index, value) {
                 sTr = sTr + "<tr><td style='width:70%'>" + value[1] + "</td>";
                 sTr = sTr + `<td style='vertical-align: middle'><input type='number'  min="0" style="width: 6vh" id='${value[0]} ' name='${value[0]}'  value='${value[2]}' /></td>
-                            <td> <img src="/Image/Icon/Camera.png" width="25" height="25" /></td>
-                            <td> <img src="/Image/Icon/Picture.png" width="25VW" height="25VW" /></td>
+                            <td> <img src="/Image/Icon/Camera.png" width="25vw" height="25vw" /></td>
+                            <td> <img src="/Image/Icon/Picture.png" width="25vw" height="25vw" /></td>
                             </tr>`;
 
             });
@@ -146,7 +146,7 @@
 
         function checkValue(self) {
 
-            document.getElementById("page").value = self;
+            document.getElementById("goPage").value = self;
 
             var rejectQty = document.getElementById("RejectQty").value;
             var model = @Html.Raw(Json.Encode(Model));
