--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml
@@ -9,12 +9,10 @@
 <style type="text/css">
 
 
-    #myTable_info {
-        color: white
-    }
 
-    #myTable_previous, #myTable_next {
-        color: white !important;
+
+    #Tab5Table_previous, #Tab5Table_next {
+        color: black !important;
     }
 
     #row-name {
@@ -39,7 +37,7 @@
 <div class="content-scroll" style=" height: calc( 100vh - 280px )">
     <div class="inner-scroll" style="float:left">
         <div>
-            <table cellspacing="100" id="myTable" class="table table-striped display">
+            <table cellspacing="100" id="Tab5Table" class="table table-striped display">
                 <thead>
                     <tr id="row-name" class="row-name">
                         <th>Article</th>
@@ -123,7 +121,7 @@
 
     $(function () {
 
-        $('#myTable').DataTable({
+        $('#Tab5Table').DataTable({
 
             "pageLength": 10,
             "filter": false,
