--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@model DatabaseObject.ViewModel.FinalInspection.QueryReport
-<table cellspacing="100" id="myTable" class="table table-striped display">
+<table cellspacing="100" id="myTable3" class="table table-striped display">
     <thead>
         <tr class="row-name">
             <th>Defect Type</th>
