--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -5,47 +5,20 @@
 @model DatabaseObject.ViewModel.FinalInspection.QueryReport
 
 @section FinalInspection_head{
-    <link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
-    @*<link href="~/ThirdParty/plugins/Tabs/nicepage.css" rel="stylesheet" />
-    <script src="~/ThirdParty/plugins/Tabs/nicepage.js"></script>*@
     <style type="text/css">
-    /*    .u-spacing-10:not(.u-text) > li:not(:last-child) {
-            margin-right:1vw;
-        }
-*/
-/*        .u-sheet{
-            width:100%;
-        }*/
-
         .whiteBackgrond div {
             padding-bottom: 0.5em;
         }
 
-  /*      .u-active-palette-2-base
-        {
-            background-color:gray;
-        }
-
-        .active {
-            background-color: white;
-        }
-
-        .u-tabs .u-tab-link {
-            padding: 0;
-            height: 3vh;
-        }*/
-
-
         #tab-Change {
-            width: 100%;
-            height:50vh;
+            width: 100%;            
         }
 
-            #tab-Change > ul {
-                display: block;
-                margin: 0;
-                list-style: none;
-            }
+        #tab-Change > ul {
+            display: block;
+            margin: 0;
+            list-style: none;
+        }
 
         .tab-title {
             list-style: none;
@@ -64,29 +37,23 @@
             box-sizing: border-box;
         }
 
-            #tab-Change > ul > li a {
-                color: #000;
-                text-decoration: none;
-            }
+        #tab-Change > ul > li a {
+            color: #000;
+            text-decoration: none;
+        }
 
-            #tab-Change > ul > li.active {
-                border-bottom: 1px solid #fff;
-                background: #fff;
-            }
+        #tab-Change > ul > li.active {
+            border-bottom: 1px solid #fff;
+            background: #fff;
+        }
 
         #tab-Change > .tab-inner {
+            padding:10px;
             color: #000;
-            border: 1px #BCBCBC solid;
-            height:80vh;
-        }
-        @@media (min-width: 992px) and (max-width: 1199px) {
-          /*  .u-sheet {
-                width: 740px;
-            }
-
-            .u-tabs .u-tab-link {
-                height: 6vh;
-            }*/
+            border: 1px black solid;
+            height: 50vh;
+            overflow: scroll;
+            overflow-x: hidden;
         }
     </style>
 }
@@ -154,6 +121,7 @@
                 </table>
             </div>
         </div>
+        <div><h1 style="font-size:2em">Inspection Detail</h1></div>
         <div id="tab-Change">
             <ul class="tab-title">
                 <li link="#tab01">General</li>
@@ -164,15 +132,15 @@
                 <li link="#tab06">Measurement</li>
                 <li link="#tab07">Others</li>
             </ul>
-            <div id="tab01" class="tab-inner" style="border:1px solid gray">
+            <div id="tab01" class="tab-inner">
                 <div style="height:auto">
                     @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml")
                 </div>
             </div>
-            <div id="tab02" class="tab-inner" style="border:1px solid gray">
+            <div id="tab02" class="tab-inner">
                 @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab2_Layout.cshtml")
             </div>
-            <div id="tab03" class="tab-inner" style="">
+            <div id="tab03" class="tab-inner">
                 @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml")
             </div>
             <div id="tab04" class="tab-inner">
@@ -189,78 +157,26 @@
             </div>
         </div>
         <div>
-            @*<section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_2976">
-                <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
-                    <div class="u-expanded-width u-tab-links-align-justify u-tabs u-tabs-1">
-                        <ul id="tab_Head" class="u-border-2 u-border-palette-2-base u-spacing-10 u-tab-list u-unstyled" role="tablist">
-                            <li class="u-tab-item" role="presentation">
-                                <a class="active u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-1" id="link-tab-1" href="#tab-1" role="tab" aria-controls="tab-0da5" aria-selected="true">General</a>
-                            </li>
-                            <li class="u-tab-item" role="presentation">
-                                <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-2" id="link-tab-2" href="#tab-2" role="tab" aria-controls="tab-2917" aria-selected="false">Check List</a>
-                            </li>
-                            <li class="u-tab-item" role="presentation">
-                                <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-3" id="link-tab-3" href="#tab-3" role="tab" aria-controls="tab-2917" aria-selected="false">Defect</a>
-                            </li>
-                            <li class="u-tab-item" role="presentation">
-                                <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-4" id="link-tab-4" href="#tab-4" role="tab" aria-controls="tab-2917" aria-selected="false">Beautiful Product Audit</a>
-                            </li>
-                            <li class="u-tab-item" role="presentation">
-                                <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-5" id="link-tab-5" href="#tab-5" role="tab" aria-controls="tab-2917" aria-selected="false">Moisture</a>
-                            </li>
-                            <li class="u-tab-item" role="presentation">
-                                <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-6" id="link-tab-6" href="#tab-6" role="tab" aria-controls="tab-2917" aria-selected="false">Measurement</a>
-                            </li>
-                            <li class="u-tab-item" role="presentation">
-                                <a class="u-active-palette-2-base u-button-style u-tab-link u-text-active-white u-text-hover-palette-2-base u-tab-link-7" id="link-tab-7" href="#tab-7" role="tab" aria-controls="tab-2917" aria-selected="false">Others</a>
-                            </li>
-                        </ul>
-                        <div class="u-tab-content">
-                            <div class="u-container-style u-tab-active u-tab-pane u-white u-tab-pane-1" id="tab-1" role="tabpanel">
-                                <div class="u-container-layout u-valign-middle u-container-layout-1">
-                                    <div class="u-expanded-width u-table u-table-responsive u-table-1" style="margin:2em">
-                                        @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml")
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="u-container-style u-tab-pane u-white u-tab-pane-2" id="tab-2" role="tabpanel">
-                                <div class="u-container-layout u-valign-middle u-container-layout-2" style="margin:2em">
-                                    @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab2_Layout.cshtml")
-                                </div>
-                            </div>
-                            <div class="u-container-style u-tab-pane u-white u-tab-pane-3" id="tab-3" role="tabpanel">
-                                <div class="u-container-layout u-valign-middle u-container-layout-3" style="margin:2em">
-                                    @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml")
-                                </div>
-                            </div>
-                            <div class="u-container-style u-tab-pane u-white u-tab-pane-4" id="tab-4" role="tabpanel">
-                                <div class="u-container-layout u-valign-middle u-container-layout-4" style="margin:2em">
-                                    @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab4_Layout.cshtml")
-                                </div>
-                            </div>
-                            <div class="u-container-style u-tab-pane u-white u-tab-pane-5" id="tab-5" role="tabpanel">
-                                <div class="u-container-layout u-valign-middle u-container-layout-5" style="margin:2em">
-                                    @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml")
-                                </div>
-                            </div>
-                            <div class="u-container-style u-tab-pane u-white u-tab-pane-6" id="tab-6" role="tabpanel">
-                                <div class="u-container-layout u-valign-middle u-container-layout-6" style="margin:2em">
-                                    @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab6_Layout.cshtml")
-                                </div>
-                            </div>
-                            <div class="u-container-style u-tab-pane u-white u-tab-pane-7" id="tab-7" role="tabpanel">
-                                <div class="u-container-layout u-valign-middle u-container-layout-7" style="margin:2em">
-                                    @Html.Partial("~/Areas/FinalInspection/Views/Query/_Tab7_Layout.cshtml")
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>*@
-        </div>
-        <div>
-
+            <table style="width:100%">
+                <tr>
+                    <td style="width:10%">CFA</td>
+                    <td style="width:30%">@Model.FinalInspection.CFA</td>
+                    <td style="width:10%">Pass Qty(pcs)</td>
+                    <td style="width:10%">@Model.FinalInspection.PassQty</td>
+                    <td style="width:10%">Inpection Result</td>
+                    <td style="width:10%">@Model.FinalInspection.InspectionResult</td>
+                    <td style="width:10%" rowspan="2"><button type="button" class="site-btn btn-red">Go On Inspect</button></td>
+                    <td style="width:10%" rowspan="2"><button type="button" class="site-btn btn-blue">Send Mail</button></td>
+                </tr>
+                <tr>
+                    <td>Submit Date</td>
+                    <td>@Model.FinalInspection.SubmitDate</td>
+                    <td>Reject Qty(pcs)</td>
+                    <td>@Model.FinalInspection.RejectQty</td>
+                    <td>Shipment Status</td>
+                    <td>@Model.FinalInspection.ShipmentStatus</td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
@@ -269,19 +185,8 @@
     <script>
         var msg = new MessagerAlert();
 
-
         $(function () {
             tabChange();
-            //$('#myTable3').DataTable({
-            //    "pageLength": 10,
-            //    "autoWidth": false,
-            //    "info": false,
-            //    "filter": false,
-            //    "paging": true,
-            //    "info": false,
-            //    "scrollY": "50vh",
-            //    "scrollCollapse": true
-            //});
         });
 
         function tabChange() {
