建立StyleManagement模組，並完成Style List功能

--- a/Quality/Quality/Views/Shared/_Layout.cshtml
+++ b/Quality/Quality/Views/Shared/_Layout.cshtml
@@ -125,6 +125,9 @@
         .mfp-with-zoom.mfp-removing.mfp-bg {
             opacity: 0;
         }
+        .mfp-bottom-bar{
+            display:none
+        }
     </style>
 </head>
 <body class="site-bg">
@@ -246,9 +249,9 @@
                 mainClass: 'mfp-with-zoom mfp-img-mobile',
                 image: {
                     verticalFit: true,
-                    titleSrc: function (item) {
-                        return item.el.attr('title') + ' &middot; <a class="image-source-link" href="' + item.el.attr('data-source') + '" target="_blank">image source</a>';
-                    }
+                    //titleSrc: function (item) {
+                    //    return item.el.attr('title') + ' &middot; <a class="image-source-link" href="' + item.el.attr('data-source') + '" target="_blank">image source</a>';
+                    //}
                 },
                 gallery: {
                     enabled: true
